Node 5.x nonsense (switch to levelup/down, const const const const)

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "deck": "0.0.4",
-    "node-leveldb": "^1.0.1",
+    "level": "^1.4.0",
     "qauth": "^0.1.1",
     "twitter": "^1.2.5"
   }
